--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -39,10 +39,10 @@
         android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:elevation="2dp"
         android:background="@drawable/icon_heart_enable"
-        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion"
-        app:layout_constraintEnd_toEndOf="@id/heart2"/>
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="@id/heart2"
+        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion" />
 
     <ImageView
         android:id="@+id/heart2"
@@ -50,10 +50,10 @@
         android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:elevation="2dp"
         android:background="@drawable/icon_heart_enable"
-        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion"
-        app:layout_constraintEnd_toEndOf="@id/heart3"/>
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="@id/heart3"
+        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion" />
 
     <ImageView
         android:id="@+id/heart3"
@@ -61,10 +61,10 @@
         android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="45dp"
-        android:elevation="2dp"
         android:background="@drawable/icon_heart_enable"
-        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion" />
 
 
     <!-- Radio group view -->
