--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -223,4 +223,19 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />
 
+    <Button
+        android:id="@+id/buttonMusic"
+        android:layout_width="270dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/button_orange_rounded"
+        android:elevation="2dp"
+        android:fontFamily="@font/nanumsquarebold"
+        android:gravity="center"
+        android:text="로그아웃"
+        android:textAllCaps="false"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/buttonUpdate" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
