--- a/app/src/main/res/layout/activity_solution.xml
+++ b/app/src/main/res/layout/activity_solution.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
     tools:context=".WordQuizSolutionActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -44,22 +43,22 @@
         android:id="@+id/scoreTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumsquarebold"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
-        android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/scoreViewDivider"
         app:layout_constraintEnd_toEndOf="@+id/scoreViewBackground"
-        app:layout_constraintStart_toStartOf="@id/scoreViewBackground"/>
+        app:layout_constraintStart_toStartOf="@id/scoreViewBackground" />
 
     <!-- Total Score view display -->
     <TextView
         android:id="@+id/scoreTotalTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/nanumsquarebold"
         android:textColor="@color/colorPrimary"
         android:textSize="30sp"
-        android:fontFamily="@font/nanumsquarebold"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="@+id/scoreViewBackground"
         app:layout_constraintStart_toStartOf="@id/scoreViewBackground"
