--- a/app/src/main/res/layout/activity_wordquiz.xml
+++ b/app/src/main/res/layout/activity_wordquiz.xml
@@ -25,10 +25,10 @@
         android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:elevation="2dp"
         android:background="@drawable/icon_heart_enable"
-        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion"
-        app:layout_constraintEnd_toEndOf="@id/heart2"/>
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="@id/heart2"
+        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion" />
 
     <ImageView
         android:id="@+id/heart2"
@@ -36,10 +36,10 @@
         android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:elevation="2dp"
         android:background="@drawable/icon_heart_enable"
-        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion"
-        app:layout_constraintEnd_toEndOf="@id/heart3"/>
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="@id/heart3"
+        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion" />
 
     <ImageView
         android:id="@+id/heart3"
@@ -47,10 +47,10 @@
         android:layout_height="24dp"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="30dp"
-        android:elevation="2dp"
         android:background="@drawable/icon_heart_enable"
-        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        android:elevation="2dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/celebrityQuestion" />
 
 
     <!-- Celebrity image view -->
@@ -71,116 +71,113 @@
         android:id="@+id/answerLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop = "20dp"
+        android:layout_marginTop="20dp"
         android:gravity="center_horizontal"
         android:orientation="horizontal"
-        app:layout_constraintTop_toBottomOf="@id/celebrityImage">
-    </LinearLayout>
+        app:layout_constraintTop_toBottomOf="@id/celebrityImage"></LinearLayout>
 
     <TableLayout
         android:id="@+id/answerBtnTable"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
         android:layout_marginStart="5dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="5dp"
         app:layout_constraintTop_toBottomOf="@id/answerLayout">
 
         <TableRow
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-             >
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/btn1"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn2"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn3"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn4"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn5"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn6"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn7"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn8"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn9"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn10"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
         </TableRow>
 
         <TableRow
@@ -189,94 +186,93 @@
 
             <Button
                 android:id="@+id/btn11"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn12"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn13"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn14"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn15"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn16"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn17"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn18"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn19"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
+
             <Button
                 android:id="@+id/btn20"
-                android:background ="@drawable/button_orange_less_rounded"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="2dp"
-                android:text="A"
-                android:layout_weight="1">
-            </Button>
+                android:layout_weight="1"
+                android:background="@drawable/button_orange_less_rounded"
+                android:text="A"></Button>
         </TableRow>
 
     </TableLayout>
@@ -307,8 +303,8 @@
         android:onClick="onButtonNext"
         android:text="@string/next"
         android:textAllCaps="false"
-        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toRightOf="@id/buttonSubmit"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/answerBtnTable" />
 
     <Button
